Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00359_classify_computer_parts.err
  File "./f00359_classify_computer_parts.py", line 55
    def test_classify_computer_parts():
    ^
SyntaxError: invalid syntax
